tests/baselines/reference/computedPropertyNamesContextualType2_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType2_ES5.ts(7,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType2_ES5.ts(8,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType2_ES5.ts (2 errors) ====
    interface I {
        [s: string]: (x: any) => number; // Doesn't get hit
        [s: number]: (x: string) => number;
    }
    
    var o: I = {
        [+"foo"](y) { return y.length; },
        ~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [+"bar"]: y => y.length
        ~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }